    (Closes: #807351).
  * Add support for uncompressed control.tar deb member (Closes: #761298).
  * Bump standards-version to 3.9.8 (no changes required).
  * Update Vcs URLs to https ones.
  * Remove support for broken timezone names from changelog parsing, with
    thanks to Guillem Jover for the patch (Closes: #792415).

 -- Stuart Prescott <stuart@debian.org>  Sun, 12 Jun 2016 00:21:09 +1000

python-debian (0.1.27) unstable; urgency=medium

  * Tighten whitespace handling in GPG Armor Header lines, with thanks to
    Guillem Jover for the patch (Closes: #782276).

 -- Stuart Prescott <stuart@debian.org>  Wed, 15 Apr 2015 00:53:27 +1000

python-debian (0.1.26) unstable; urgency=medium

  * Fix FTBFS with binutils >= 2.25-6 by turning off determinism in ar
    archives when building archives in the test suite, thanks to Dmitry
    Shachnev for the patch (Closes: #781543).
  * Require binutils >= 2.23 for building and in the autopkgtest tests to
    ensure that ar understands the option to suppress determinism.

 -- Stuart Prescott <stuart@debian.org>  Sat, 04 Apr 2015 00:39:02 +1100

python-debian (0.1.25) unstable; urgency=medium

  * deb822: More encoding gymnastics to support parsing signed files
    opened in text mode (Closes: #764380).

 -- John Wright <jsw@debian.org>  Tue, 21 Oct 2014 22:32:26 -0700

python-debian (0.1.24) unstable; urgency=medium

  * copyright module: make Copyright objects iterable
  * debian_support.list_releases(): update release list (Closes: #758027)

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 01 Oct 2014 16:41:15 +0200

python-debian (0.1.23) unstable; urgency=medium

  [ Stuart Prescott ]
  * Add sha512 sums to Release and Sources (Closes: #732599).
  * Use warnings rather than stderr in PkgRelation (Closes: #712513).
  * Expose the list of bugs closed by a changelog entry; thanks to Jelmer
    Vernooi and Stefano Rivera for patches (Closes: #634848).