@@ -8,6 +8,8 @@ python-debian (0.1.28) UNRELEASED; urgency=medium
   * Update Vcs URLs to https ones.
   * Remove support for broken timezone names from changelog parsing, with
     thanks to Guillem Jover for the patch (Closes: #792415).
+  * Allow changelog entries to be accessed by sequence number or by version
+    string (Closes: #634849).
 
  -- Stuart Prescott <stuart@debian.org>  Sun, 12 Jun 2016 00:21:09 +1000
 
